Fix heading highlight visibility in dark mode
- Add dark mode style for :target selector
- Use amber-800 (#854d0e) for better contrast with white text
- Improve readability when clicking TOC links in dark mode

Fixes #94

--- a/stylesheets/compiled.css
+++ b/stylesheets/compiled.css
@@ -1432,6 +1432,10 @@ body:is(.dark *){
   margin-bottom: 2rem;
 }
 
+.ml-0{
+  margin-left: 0px;
+}
+
 .ml-0\.5{
   margin-left: 0.125rem;
 }
@@ -1462,10 +1466,6 @@ body:is(.dark *){
 
 .mt-auto{
   margin-top: auto;
-}
-
-.ml-0{
-  margin-left: 0px;
 }
 
 .block{
@@ -1520,8 +1520,8 @@ body:is(.dark *){
   height: 0.75rem;
 }
 
-.h-\[500px\]{
-  height: 500px;
+.h-\[455px\]{
+  height: 455px;
 }
 
 .h-auto{
@@ -1530,10 +1530,6 @@ body:is(.dark *){
 
 .h-full{
   height: 100%;
-}
-
-.h-\[455px\]{
-  height: 455px;
 }
 
 .max-h-96{
@@ -1582,10 +1578,6 @@ body:is(.dark *){
 
 .max-w-4xl{
   max-width: 56rem;
-}
-
-.max-w-6xl{
-  max-width: 72rem;
 }
 
 .max-w-xs{
@@ -1680,14 +1672,6 @@ body:is(.dark *){
 
 .gap-6{
   gap: 1.5rem;
-}
-
-.gap-8{
-  gap: 2rem;
-}
-
-.gap-10{
-  gap: 2.5rem;
 }
 
 .gap-x-6{
@@ -1802,10 +1786,6 @@ body:is(.dark *){
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-semantic-bg-primary-enabled{
-  background-color: var(--color-background-primary-action-enabled);
 }
 
 .p-2{
@@ -2093,10 +2073,6 @@ body:is(.dark *){
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-semantic-text-link-hovered{
-  color: var(--color-text-link-hovered);
-}
-
 .underline{
   text-decoration-line: underline;
 }
@@ -2273,10 +2249,6 @@ body:is(.dark *){
   background-color: rgb(231 229 228 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-semantic-bg-primary-hovered:hover{
-  background-color: var(--color-background-primary-action-hovered);
-}
-
 .hover\:text-gold-500:hover{
   color: var(--color-gold-500);
 }
@@ -2343,10 +2315,6 @@ body:is(.dark *){
   color: rgb(96 165 250 / var(--tw-text-opacity, 1));
 }
 
-.dark\:text-ruby-400:is(.dark *){
-  color: var(--color-ruby-400);
-}
-
 .dark\:text-stone-100:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(245 245 244 / var(--tw-text-opacity, 1));
@@ -2375,10 +2343,6 @@ body:is(.dark *){
 .dark\:text-white:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.dark\:text-ruby-600:is(.dark *){
-  color: var(--color-ruby-600);
 }
 
 .dark\:marker\:text-stone-500 *:is(.dark *)::marker{
@@ -2448,10 +2412,6 @@ body:is(.dark *){
     display: none;
   }
 
-  .md\:h-\[600px\]{
-    height: 600px;
-  }
-
   .md\:h-\[595px\]{
     height: 595px;
   }
@@ -2480,16 +2440,16 @@ body:is(.dark *){
     flex-direction: row;
   }
 
+  .md\:gap-10{
+    gap: 2.5rem;
+  }
+
   .md\:gap-2{
     gap: 0.5rem;
   }
 
   .md\:gap-8{
     gap: 2rem;
-  }
-
-  .md\:gap-10{
-    gap: 2.5rem;
   }
 
   .md\:border-0{
